--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2980,3 +2980,27 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
   100% {
     -webkit-transform: scale(1.2, 1.2);
     opacity: 0.0; } }
+
+.input{
+  position: relative;
+  display: inline;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  width: 100%; 
+}
+
+.btn-BookReader {
+  margin-top: 40px;
+  height: 100px;
+}
+
+.btn-Book {
+  margin-top: 30px;
+  margin-left: 13px;
+}
+
+.formInput {
+  width: 100%;
+}
